[gd_scene load_steps=5 format=3 uid="uid://dqd1hf400nsyw"]

[ext_resource type="Texture2D" uid="uid://cklhnw7qmqrfc" path="res://Textures/temp_food_item.png" id="1_4t5m8"]
[ext_resource type="Script" uid="uid://ov18wx336ku" path="res://Scripts/food_item.gd" id="2_v113q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v113q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v113q"]
size = Vector2(92, 87)

[node name="FoodItem" type="Button" node_paths=PackedStringArray("collision_shape")]
offset_left = -76.475
offset_top = -82.675
offset_right = 81.525
offset_bottom = 75.325
theme_override_styles/focus = SubResource("StyleBoxEmpty_v113q")
icon = ExtResource("1_4t5m8")
flat = true
script = ExtResource("2_v113q")
collision_shape = NodePath("Area2D/CollisionShape2D")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(77, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_v113q")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
